# dp-accelerated-portfolio-opt

./: .gitignore  README.md  Readmecopy.md  Risk_Parity_test.py  demo.ipynb  lqr_solver.py  pyproject.toml  risk_parity_extension.md  test_code.py
codes/: Markowitz_test.py  risk_parity_extension.md
codes/examples/: benchmark_demo.py
codes/lqr_portfolio_optimizer/: __init__.py
codes/src/: __init__.py  lqr.py
codes/tests/: test_solver.py
examples/: benchmark_demo.py
lqr/: __init__.py  solver.py
lqr_portfolio_optimizer/: solver.py
notebooks/: build_matrix.py  demo copy.ipynb  demo.ipynb  demoadd.ipynb  visual.py
old_codes(ignored)/: Markowitz_implement.md  dp_solver.py  merton.ipynb  test_code.py
old_codes(ignored)/src/: execution.py  markowitz.py  risk_parity.py
old_codes(ignored)/tests/: LICENSE
src/: lqr_solver.py
tests/: test_Markowitz.py  test_given.ipynb  test_givenweight.py  test_risk_parity.py
