[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lqr-portfolio-optimizer"
version = "0.1.0"
description = "A fast Dynamic Programming solver for multi-period portfolio optimization using LQR theory"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "cvxpy>=1.2",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lqr*"]
